18.10.2021 -> Изменения мод. доступа, новые иконки устройств